--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -74,3 +74,60 @@
     overflow-y: scroll;
     margin-left: 15vw;
 }
+
+.left-menu{
+    position: absolute;
+    display: none;
+    width: 35vw;
+    height: 100vh;
+    background-color: var(--baseColor);
+    left: 0;
+    z-index: 99;
+    flex-direction: column;
+    align-items: center;
+}
+
+.left-menu img:nth-child(2){
+    width: 300px;
+    height: 300px;
+}
+.left-menu img:nth-child(1){
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    right: 0;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.menu-category-options{
+    display: flex;
+    flex-direction: column;
+    height: max-content;
+    max-height: 50vh;
+    overflow: scroll;
+}
+
+.menu-category-options p{
+    font-size: 20px;
+    font-weight: 500;
+    margin: 1vh;
+    cursor: pointer;
+    color: var(--secondColor);
+}
+
+.menu-category-options p:hover{
+    text-decoration: underline;
+}
+
+
+.cover-page{
+    position: absolute;
+    display: none;
+    z-index: 98;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--secondColor);
+    opacity: 0.7;
+}
