--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -131,3 +131,64 @@
     background-color: var(--secondColor);
     opacity: 0.7;
 }
+
+.right-menu{
+    position: absolute;
+    display: none;
+    width: 35vw;
+    height: 100vh;
+    background-color: var(--baseColor);
+    right: 0;
+    z-index: 99;
+    flex-direction: column;
+    align-items: center;
+}
+
+.right-menu img:nth-child(1){
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    right: 0;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.right-menu .billet{
+    width: 30vw;
+    height: 80vh;
+    background-color: var(--secondColor);
+    margin-top: 10vh;
+}
+
+.right-menu .cart-buttons{
+    width: 20vw;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2vh;
+}
+
+.right-menu .cart-buttons button{
+    width: 10vw;
+    height: 5vh;
+    border-color: transparent;
+    cursor: pointer;
+    font-size: 3vh;
+    font-weight: 500;
+    transform: scale(0.9);
+    border-radius: 5px;
+}
+.right-menu .cart-buttons button:hover{
+    transform: scale(1);
+}
+
+
+
+.right-menu .cart-buttons img{
+    cursor: pointer;
+    transform: scale(0.9);
+}
+
+.right-menu .cart-buttons img:hover{
+    transform: scale(1);
+}
