--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -204,3 +204,15 @@
     font-weight: 500;
     color: var(--secondColor);
 }
+
+.center-menu{
+    position: absolute;
+    margin-top: 15vh;
+    display: none;
+    flex-direction: column;
+    width: 50vw;
+    height: 70vh;
+    background-color: var(--baseColor);
+    z-index: 100;
+    border-radius: 5px;
+}
